<resources>
    <string name="app_name">Кто хочет стать миллионером</string>

    <string name="false_button">Нет</string>
    <string name="true_button">Да</string>
    <string name="quit_button">Выход</string>
    <string name="start_over_button">Снова</string>

    <string name="true_ans">Правильно</string>
    <string name="false_ans">Неправильно</string>

    <string name="question_next">Следующий</string>
    <string name="question_prev">Предыдущий</string>

    <string name="cheat_sure">Точно считерить?</string>
    <string name="cheat_true">Правильный ответ:</string>
    <string name="cheat_button">Считерить</string>
    <string name="cheat_cheated">Теперь живи в проклятом мире, который ты создал.</string>

    <string name="cheated">Считерено</string>
    <string name="question_text">Вопрос?</string>


    <string name="question_button_1">1</string>
    <string name="question_button_2">2</string>
    <string name="question_button_3">3</string>
    <string name="question_button_4">4</string>

    <string name="question_1_label">1: 500</string>
    <string name="question_1">1. Как правильно закончить пословицу: «Не откладывай на завтра то, что можно…»?</string>
    <string name="question_1_text">
        Варианты ответа: \n
        1. сделать сегодня \n
        2. сделать послезавтра \n
        3. сделать через месяц \n
        4. никогда не делать\n
    </string>
    <string name="question_1_truth">1</string>


    <string name="question_2_label">2: 1.000</string>
    <string name="question_2">2. Что говорит человек, когда замечает нечто необычное?</string>
    <string name="question_2_text">
        Варианты ответа:\n
        1. попало в лоб\n
        2. залетело в рот\n
        3. накапало в уши\n
        4. бросилось в глаза\n
    </string>
    <string name="question_2_truth">4</string>


    <string name="question_3_label">3: 2.000</string>
    <string name="question_3">3. Что помогает туристу ориентироваться в незнакомом городе?</string>
    <string name="question_3_text">
        Варианты ответа:\n
        1. путепровод\n
        2. путеукладчик\n
        3. путеводитель\n
        4. путеводная звезда\n
    </string>
    <string name="question_3_truth">3</string>


    <string name="question_4_label">4: 3.000</string>
    <string name="question_4">4. Какой наряд прославил баснописец Крылов?</string>
    <string name="question_4_text">
        Варианты ответа:\n
        1. тришкин кафтан\n
        2. ивашкин армяк\n
        3. прошкин зипун\n
        4. машкин сарафан\n
    </string>
    <string name="question_4_truth">1</string>


    <string name="question_5_label">5: 5.000</string>
    <string name="question_5">5. Как звали старшую сестру императора Петра Первого?</string>
    <string name="question_5_text">
        Варианты ответа:\n
        1. Вера\n
        2. Надежда\n
        3. Любовь\n
        4. Софья\n
    </string>
    <string name="question_5_truth">4</string>


    <string name="question_6_label">6: 10.000</string>
    <string name="question_6">6. Что не бывает морским?</string>
    <string name="question_6_text">
        Варианты ответа:\n
        1. рельс\n
        2. огурец\n
        3. гребешок\n
        4. узел\n
    </string>
    <string name="question_6_truth">1</string>


    <string name="question_7_label">7: 15.000</string>
    <string name="question_7">7. Кого с большим основанием можно назвать островитянами?</string>
    <string name="question_7_text">
        Варианты ответа:\n
        1. алеутов\n
        2. эвенков\n
        3. чукчей\n
        4. якутов\n
    </string>
    <string name="question_7_truth">1</string>


    <string name="question_8_label">8: 25.000</string>
    <string name="question_8">8. В какой стране появилась мандолина?</string>
    <string name="question_8_text">
        Варианты ответа:\n
        1. Испания\n
        2. Италия\n
        3. Венгрия\n
        4. Греция\n
    </string>
    <string name="question_8_truth">2</string>


    <string name="question_9_label">9: 50.000</string>
    <string name="question_9">9. Как жители Лондона прозвали небоскреб Мэри-Экс, спроектированный Норманом Фостером?</string>
    <string name="question_9_text">
        Варианты ответа:\n
        1. «корнишон»\n
        2. «баклажан»\n
        3. «кабачок»\n
        4. «патиссон»\n
    </string>
    <string name="question_9_truth">1</string>


    <string name="question_10_label">10: 100.000</string>
    <string name="question_10">10. Какой врач первым в истории русской медицины применил гипсовую повязку?</string>
    <string name="question_10_text">
        Варианты ответа:\n
        1. Субботин\n
        2. Пирогов\n
        3. Боткин\n
        4. Склифосовский\n
    </string>
    <string name="question_10_truth">2</string>


    <string name="question_11_label">11: 200.000</string>
    <string name="question_11">11. Где в Древней Греции можно было увидеть надпись: «Здесь живут мертвые и говорят немые»?</string>
    <string name="question_11_text">
        Варианты ответа:\n
        1. на кладбищах\n
        2. в больницах\n
        3. в библиотеках\n
        4. в тюрьмах\n
    </string>
    <string name="question_11_truth">3</string>

    <string name="question_12_label">12: 400.000</string>
    <string name="question_12">12. Кто был одним из авторов сценария фильма «Музыкальная история» с Сергеем Лемешевым в главной роли?</string>
    <string name="question_12_text">
        Варианты ответа:\n
        1. Илья Ильф\n
        2. Евгений Петров\n
        3. Михаил Зощенко\n
        4. Аркадий Аверченко\n
    </string>
    <string name="question_12_truth">2</string>


    <string name="question_13_label">13: 800.000</string>
    <string name="question_13">13. С чем часто охотятся на рыбу протоптера между сезонами дождей?</string>
    <string name="question_13_text">
        Варианты ответа:\n
        1. с сетями\n
        2. с сачками\n
        3. с ружьями\n
        4. с лопатами\n
    </string>
    <string name="question_13_truth">4</string>


    <string name="question_14_label">14: 1.500.000</string>
    <string name="question_14">14. Каким видом спорта серьезно увлекался французский летчик Ролан Гаррос?</string>
    <string name="question_14_text">
        Варианты ответа:\n
        1. пинг-понгом\n
        2. поло\n
        3. гольфом\n
        4. регби\n
    </string>
    <string name="question_14_truth">4</string>


    <string name="question_15_label">15: 3.000.000</string>
    <string name="question_15">15. Что такое лобогрейка?</string>
    <string name="question_15_text">
        Варианты ответа:\n
        1. жнейка\n
        2. шапка\n
        3. болезнь\n
        4. печка\n
    </string>
    <string name="question_15_truth">1</string>

</resources>
