<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:baselineAligned="false"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center|top"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="60"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/question_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="24dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/question_choices"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="24dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:orientation="horizontal"
                        android:paddingTop="25dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="0.55"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/question_prev"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/question_prev"
                                android:enabled="false"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:layout_height="wrap_content"
                            android:gravity="end">
                            <Button
                                android:id="@+id/question_next"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/question_next" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="25dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_button_1" />

                        <Button
                            android:id="@+id/button_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_button_3" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_button_2" />

                        <Button
                            android:id="@+id/button_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_button_4" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:orientation="horizontal"
                    android:padding="10dp">

                        <Button
                            android:id="@+id/start_over_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/start_over_button"
                            android:visibility="invisible"
                            android:padding="5dp" />
                        <Button
                            android:id="@+id/quit_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/quit_button"
                            android:visibility="invisible"
                            android:padding="5dp"/>
                    </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center|bottom">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.9"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_1_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_2_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_3_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_4_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_5_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_6_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_7_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_8_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_9"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_9_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_10"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_10_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_11"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_11_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_12"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_12_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_13"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_13_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_14"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_14_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp">
                            <TextView
                                android:id="@+id/row_15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/question_15_label"
                                android:padding="1dp"/>
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="0dp"
                        android:layout_weight="0.11"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/cheat_button_invoke"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cheat_button"
                            android:padding="5dp"/>
                    </LinearLayout>

                </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>